2007-10-19  Akim Demaille  <akim@lrde.epita.fr>

	More Aibo protections.
	* src/userver.cc: here.

2007-10-19  Akim Demaille  <akim@lrde.epita.fr>

	Use libport's config.h to detect OpenR.
	* include/kernel/blockmemorymanager.hh, include/kernel/uconnection.hh,
	* include/kernel/userver.hh, src/uconnection.cc, src/userver.cc:
	Include libport/config.h.
	Use LIBPORT_URBI_ENV_AIBO.

2007-10-19  Akim Demaille  <demaille@gostai.com>

	foreach.
	* src/ucommand.cc: More of it.

2007-10-19  Akim Demaille  <demaille@gostai.com>

	Fix error message.
	* src/parser/bison/ugrammar.y: Report by JCB.

2007-10-19  Akim Demaille  <demaille@gostai.com>

	Use threads only if !OPENR.
	* include/kernel/blockmemorymanager.hh, include/kernel/uconnection.hh,
	* include/kernel/userver.hh, src/uconnection.cc, src/userver.cc:
	Do it.

2007-10-19  Akim Demaille  <demaille@gostai.com>

	Use BOOST_FOREACH.
	* src/ucommand.cc: At random places.

2007-10-19  Akim Demaille  <demaille@gostai.com>

	Reject for&.
	* src/parser/bison/ugrammar.y: here.

2007-10-19  Akim Demaille  <akim@lrde.epita.fr>

	libport use.
	WARNING: Apparently someone decided to use libport/Makefile.am,
	which is wrong afai can remember...  Now both liburbi *and* the
	kernel will want to install libport.  Well done pal.
	* Makefile.am (SVN_EXTERNALS): Add libport so that libport-ci
	works as expected.

2007-10-19  Akim Demaille  <akim@lrde.epita.fr>

	Use BOOST_FOREACH.
	* src/ucommand.cc: At some random places, while it compiles.

2007-10-19  Akim Demaille  <akim@lrde.epita.fr>

	Fix notag handling.
	* src/ucommand.cc (UCommand_EXPR::execture_): Display the result
	when there is no tag, so that the top level displays the result.
	As a consequence, inner expressions still display something, I
	don't really know how to avoid this with a simple Q&D hack.
	* src/ucommand.hh, src/ucommand.hxx (tag_info_get): New.
	* src/uconnection.cc (UConnection::mkPrefix): Don't display notag
	tags.
