@@ -1,5 +1,10 @@
 2007-10-19  Akim Demaille  <akim@lrde.epita.fr>
 
+	More Aibo shielding.
+	* src/uconnection.cc: here.
+
+2007-10-19  Akim Demaille  <akim@lrde.epita.fr>
+
 	More Aibo protections.
 	* src/userver.cc: here.
 
